--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "dependencies": {
     "alexa-app": "^4.0.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "moment": "^2.18.1",
+    "spu-api": "^1.0.1"
+  },
+  "alexa": {
+    "applicationId": "amzn1.ask.skill.98b9d973-d9fe-4243-889e-de5d30002864"
   }
 }
