--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.0.35",
+    "@types/node": "^7.0.12",
     "delete": "^0.3.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.6",
@@ -20,8 +20,6 @@
   },
   "dependencies": {
     "alexa-app": "^4.0.0",
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
     "moment": "^2.18.1",
     "spu-api": "^1.0.1"
   },
