--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "spu-alexa",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Alexa skill for Seattle Public Utilities services.",
   "main": "lib/Index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": {
     "name": "Phillip Hoff",
     "email": "phillip@orst.edu"
