--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spu-alexa",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "An Alexa skill for Seattle Public Utilities services.",
   "main": "lib/Index.js",
   "author": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^7.0.12",
+    "@types/request": "0.0.42",
     "delete": "^0.3.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.6",
@@ -18,6 +19,7 @@
   "dependencies": {
     "alexa-app": "^4.0.0",
     "moment": "^2.18.1",
+    "request": "^2.81.0",
     "spu-api": "^1.0.1"
   },
   "alexa": {
