--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spu-alexa",
-  "version": "1.2.1",
+  "version": "1.3.1",
   "description": "An Alexa skill for Seattle Public Utilities services.",
   "main": "lib/Index.js",
   "author": {
@@ -18,9 +18,10 @@
   },
   "dependencies": {
     "alexa-app": "^4.0.0",
+    "debug": "^2.6.8",
     "moment": "^2.18.1",
     "request": "^2.81.0",
-    "spu-api": "^1.0.1"
+    "spu-api": "^1.1.0"
   },
   "alexa": {
     "applicationId": "amzn1.ask.skill.98b9d973-d9fe-4243-889e-de5d30002864"
